<resources>
    <string name="app_name">Rosanne</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="fav">Favorite</string>
    <string name="orders">Orders</string>
    <string name="shop">Shopping Cart</string>
    <string name="about">About App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginSuccess">login successed</string>
    <string name="loginFail">login failed</string>
    <string name="registerSuccess">success</string>
    <string name="registerFail">register failed</string>
    <string name="addToFav">add to Favorite</string>
    <string name="quantity">Quantity :</string>
    <string name="peice">Peice</string>
    <string name="selectTime">Select Time</string>
    <string name="confirmOrder">order confirmtion</string>
    <string name="orderDialogMessage">Are you sure to complete order?</string>
    <string name="confirm">Yes,sure</string>
    <string name="addOrderSuccess">add Order successfully</string>
    <string name="cancelDialog">Cancel</string>
    <string name="addToCartSuccess">add to cart succeded</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPass">Forget password ?</string>
    <string name="createNewAccount">Create new account ?</string>
    <string name="username">username</string>
    <string name="repeat_password">repeat password</string>
    <string name="phone">phone</string>
    <string name="aboutAppString">Rosanne is one of the best online gifting stores, which offer a wide range of existing gifts to select from , and the delivery services from any part of the world. Flowers have a therapy effect to lighten moods and deliver unique joy to our near and dear ones.Rosanne is created with the aim of bridging gaps between people, and to bring the world at the fingertips. Thus, we offer the best opportunity to enjoy the special moments of your life with your friends and family.</string>
    <string name="homeText">There is no age for gifts as it is loved by all. Gifts are best form to let someone know how much they mean to you. Various options are available in market for gifting which suits the various occasion and event. We too have stocked our store with various gift hampers which will help you chose the best one for your dear one. So now you can quickly order gift online by going through our offer and sent the best one to your dear one.</string>
    <string name="map_hint">your address will appear after choose your location.</string>
    <string name="orderDate">Order Date</string>
    <string name="deliveryDate">Delivery Date</string>
    <string name="deliveryTime">Delivery Time</string>
    <string name="totalPrice">Total Price</string>
    <string name="deliverAddress">Delivery Address</string>
    <string name="products">Products</string>
    <string name="emptyShop">Empty Shopping Cart</string>
    <string name="next">Next</string>
    <string name="selectAddress">Select Address</string>
    <string name="buyNow">Buy Now</string>
    <string name="descrption">Description</string>
    <string name="addToCart">add to cart</string>
    <string name="remove">remove</string>
=    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">Favorite is Empty</string>
    <string name="SHARED_PREF">sharedPref</string>
    <string name="fail_internet">check internet connection</string>
    <string name="pass_and_repass">password and repasswprd must be the same</string>
    <string name="frag">myFragment</string>
    <string name="emptyName">Name Is Required!</string>
    <string name="shortName">Name Must Be  5 at Least</string>
    <string name="rangeName">Name Must Be Less Than 120 Character</string>
    <string name="emptyEmail">Email Is Required!</string>
    <string name="invalidEmail">Enter Valid Email</string>
    <string name="emptyPass">passWord Is Required!</string>
    <string name="shortPass">passWord Must Be  3 At Least</string>
    <string name="rangePAss">PassWord Must Be Less Than 40 Character</string>
    <string name="emptyFiled">This Field Is Required!</string>
    <string name="empty_text" />
    <string name="dollar">$</string>
    <string name="comma">,</string>
</resources>

